@@ -77,7 +77,7 @@
          },
          "suggests" : {
             "Dist::Zilla::App::Command::bakeini" : "0.001002",
-            "Dist::Zilla::PluginBundle::Author::KENTNL" : "2.018000"
+            "Dist::Zilla::PluginBundle::Author::KENTNL" : "2.019000"
          }
       },
       "runtime" : {
@@ -155,7 +155,7 @@
          "Dist::Zilla::Plugin::Manifest" : "5.020",
          "Dist::Zilla::Plugin::ManifestSkip" : "5.020",
          "Dist::Zilla::Plugin::MetaConfig" : "5.020",
-         "Dist::Zilla::Plugin::MetaData::BuiltWith" : "1.001001",
+         "Dist::Zilla::Plugin::MetaData::BuiltWith" : "1.002000",
          "Dist::Zilla::Plugin::MetaJSON" : "5.020",
          "Dist::Zilla::Plugin::MetaProvides::Package" : "2.000004",
          "Dist::Zilla::Plugin::MetaTests" : "5.020",
@@ -179,7 +179,7 @@
          "Dist::Zilla::Plugin::TestRelease" : "5.020",
          "Dist::Zilla::Plugin::Twitter" : "0.025",
          "Dist::Zilla::Plugin::UploadToCPAN" : "5.020",
-         "Dist::Zilla::PluginBundle::Author::KENTNL" : "2.018000",
+         "Dist::Zilla::PluginBundle::Author::KENTNL" : "2.019000",
          "Dist::Zilla::Role::InstallTool" : "5.020",
          "ExtUtils::MakeMaker" : "6.98",
          "File::Spec" : "3.48",
@@ -288,7 +288,7 @@
                }
             },
             "name" : "@Author::KENTNL/MetaData::BuiltWith",
-            "version" : "1.001001"
+            "version" : "1.002000"
          },
          {
             "class" : "Dist::Zilla::Plugin::Git::Contributors",
