@@ -64,7 +64,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Manifest: '5.020'
     Dist::Zilla::Plugin::ManifestSkip: '5.020'
     Dist::Zilla::Plugin::MetaConfig: '5.020'
-    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.001001'
+    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.002000'
     Dist::Zilla::Plugin::MetaJSON: '5.020'
     Dist::Zilla::Plugin::MetaProvides::Package: '2.000004'
     Dist::Zilla::Plugin::MetaTests: '5.020'
@@ -88,7 +88,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::TestRelease: '5.020'
     Dist::Zilla::Plugin::Twitter: '0.025'
     Dist::Zilla::Plugin::UploadToCPAN: '5.020'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.018000'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.019000'
     Dist::Zilla::Role::InstallTool: '5.020'
     ExtUtils::MakeMaker: '6.98'
     File::Spec: '3.48'
@@ -176,7 +176,7 @@ x_Dist_Zilla:
               - -i
             uname_call: uname
       name: '@Author::KENTNL/MetaData::BuiltWith'
-      version: '1.001001'
+      version: '1.002000'
     -
       class: Dist::Zilla::Plugin::Git::Contributors
       config:
